--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -505,7 +505,8 @@ nav.navbar .btn-navbar:hover {
 	-webkit-transition: .3s;
 	transition: .3s;
 	padding: 30px 20px;
-	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16)
+	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.16);
+	height: 370px;
 }
 .single-service:before {
 	position: absolute;
@@ -531,15 +532,15 @@ nav.navbar .btn-navbar:hover {
 }
 .single-service:hover:after,
 .single-service:hover:before {
-	width: 50%;
+	width: 100%;
 	height: 2px;
 	-webkit-transition: .3s;
 	transition: .3s
 }
 .single-service:hover {
-	box-shadow: 1px 3px 10px 0 rgba(0, 0, 0, 0.10)
+	box-shadow: 4px 3px 10px 0 rgba(0, 0, 0, 0.10)
 }
-.single-service i.fa {
+.single-service i.fa,i.far{
 	font-size: 20px;
 	width: 60px;
 	height: 60px;
@@ -550,7 +551,7 @@ nav.navbar .btn-navbar:hover {
 	-webkit-transition: .3s;
 	transition: .3s
 }
-.single-service:hover i.fa {
+.single-service:hover i.fa,i.far {
 	background-color: #2196f3;
 	color: #fff;
 	border-color: #2196f3;
@@ -566,3 +567,440 @@ nav.navbar .btn-navbar:hover {
 	font-size: 15px;
 	line-height: 1.8;
 }
+
+
+/* footer */
+
+.animate-border {
+	position: relative;
+	display: block;
+	width: 115px;
+	height: 3px;
+	background: #007bff; }
+  
+  .animate-border:after {
+	position: absolute;
+	content: "";
+	width: 35px;
+	height: 3px;
+	left: 0;
+	bottom: 0;
+	border-left: 10px solid #fff;
+	border-right: 10px solid #fff;
+	-webkit-animation: animborder 2s linear infinite;
+	animation: animborder 2s linear infinite; }
+  
+  @-webkit-keyframes animborder {
+	0% {
+	  -webkit-transform: translateX(0px);
+	  transform: translateX(0px); }
+	100% {
+	  -webkit-transform: translateX(113px);
+	  transform: translateX(113px); } }
+  
+  @keyframes animborder {
+	0% {
+	  -webkit-transform: translateX(0px);
+	  transform: translateX(0px); }
+	100% {
+	  -webkit-transform: translateX(113px);
+	  transform: translateX(113px); } }
+  
+  .animate-border.border-white:after {
+	border-color: #fff; }
+  
+  .animate-border.border-yellow:after {
+	border-color: #F5B02E; }
+  
+  .animate-border.border-orange:after {
+	border-right-color: #007bff;
+	border-left-color: #007bff; }
+  
+  .animate-border.border-ash:after {
+	border-right-color: #EEF0EF;
+	border-left-color: #EEF0EF; }
+  
+  .animate-border.border-offwhite:after {
+	border-right-color: #F7F9F8;
+	border-left-color: #F7F9F8; }
+  
+  /* Animated heading border */
+  @keyframes primary-short {
+	0% {
+	  width: 15%; }
+	50% {
+	  width: 90%; }
+	100% {
+	  width: 10%; } }
+  
+  @keyframes primary-long {
+	0% {
+	  width: 80%; }
+	50% {
+	  width: 0%; }
+	100% {
+	  width: 80%; } } 
+  
+  .dk-footer {
+	padding: 75px 0 0;
+	background-color: #151414;
+	position: relative;
+	z-index: 2; }
+	.dk-footer .contact-us {
+	  margin-top: 0;
+	  margin-bottom: 30px;
+	  padding-left: 80px; }
+	  .dk-footer .contact-us .contact-info {
+		margin-left: 50px; }
+	  .dk-footer .contact-us.contact-us-last {
+		margin-left: -80px; }
+	.dk-footer .contact-icon i {
+	  font-size: 24px;
+	  top: -15px;
+	  position: relative;
+	  color:#007bff; }
+  
+  .dk-footer-box-info {
+	position: absolute;
+	top: -60px;
+	background: #202020;
+	padding: 40px;
+	z-index: 2; }
+	.dk-footer-box-info .footer-social-link h3 {
+	  color: #fff;
+	  font-size: 24px;
+	  margin-bottom: 25px; }
+	.dk-footer-box-info .footer-social-link ul {
+	  list-style-type: none;
+	  padding: 0;
+	  margin: 0; }
+	.dk-footer-box-info .footer-social-link li {
+	  display: inline-block; }
+	.dk-footer-box-info .footer-social-link a i {
+	  display: block;
+	  width: 40px;
+	  height: 40px;
+	  border-radius: 50%;
+	  text-align: center;
+	  line-height: 40px;
+	  background: #000;
+	  margin-right: 5px;
+	  color: #fff; }
+	  .dk-footer-box-info .footer-social-link a i.fa,i.far-facebook {
+		background-color: #3B5998; }
+	  .dk-footer-box-info .footer-social-link a i.fa,i.far-twitter {
+		background-color: #55ACEE; }
+	  .dk-footer-box-info .footer-social-link a i.fa,i.far-google-plus {
+		background-color: #DD4B39; }
+	  .dk-footer-box-info .footer-social-link a i.fa,i.far-linkedin {
+		background-color: #0976B4; }
+	  .dk-footer-box-info .footer-social-link a i.fa,i.far-instagram {
+		background-color: #B7242A; }
+  
+  .footer-awarad {
+	margin-top: 285px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-flex: 0;
+	-webkit-flex: 0 0 100%;
+	-moz-box-flex: 0;
+	-ms-flex: 0 0 100%;
+	flex: 0 0 100%;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-moz-box-align: center;
+	-ms-flex-align: center;
+	align-items: center; }
+	.footer-awarad p {
+	  color: #fff;
+	  font-size: 24px;
+	  font-weight: 700;
+	  margin-left: 20px;
+	  padding-top: 15px; }
+  
+  .footer-info-text {
+	margin: 26px 0 32px; }
+  
+  .footer-left-widget {
+	padding-left: 80px; }
+  
+  .footer-widget .section-heading {
+	margin-bottom: 35px; }
+  
+  .footer-widget h3 {
+	font-size: 24px;
+	color: #fff;
+	position: relative;
+	margin-bottom: 15px;
+	max-width: -webkit-fit-content;
+	max-width: -moz-fit-content;
+	max-width: fit-content; }
+  
+  .footer-widget ul {
+	width: 50%;
+	float: left;
+	list-style: none;
+	margin: 0;
+	padding: 0; }
+  
+  .footer-widget li {
+	margin-bottom: 18px; }
+  
+  .footer-widget p {
+	margin-bottom: 27px; }
+  
+  .footer-widget a {
+	color: #878787;
+	-webkit-transition: all 0.3s;
+	-o-transition: all 0.3s;
+	transition: all 0.3s; }
+	.footer-widget a:hover {
+	  color: #007bff; }
+  
+  .footer-widget:after {
+	content: "";
+	display: block;
+	clear: both; }
+  
+  .dk-footer-form {
+	position: relative; }
+	.dk-footer-form input[type=email] {
+	  padding: 14px 28px;
+	  border-radius: 50px;
+	  background: #2E2E2E;
+	  border: 1px solid #2E2E2E; }
+	.dk-footer-form input::-webkit-input-placeholder, .dk-footer-form input::-moz-placeholder, .dk-footer-form input:-ms-input-placeholder, .dk-footer-form input::-ms-input-placeholder, .dk-footer-form input::-webkit-input-placeholder {
+	  color: #878787;
+	  font-size: 14px; }
+	.dk-footer-form input::-webkit-input-placeholder, .dk-footer-form input::-moz-placeholder, .dk-footer-form input:-ms-input-placeholder, .dk-footer-form input::-ms-input-placeholder, .dk-footer-form input::placeholder {
+	  color: #878787;
+	  font-size: 14px; }
+	.dk-footer-form button[type=submit] {
+	  position: absolute;
+	  top: 0;
+	  right: 0;
+	  padding: 12px 24px 12px 17px;
+	  border-top-right-radius: 25px;
+	  border-bottom-right-radius: 25px;
+	  border: 1px solid #007bff;
+	  background: #007bff;
+	  color: #fff; }
+	.dk-footer-form button:hover {
+	  cursor: pointer; }
+  
+
+  /* ==========================
+  
+	  Contact
+  
+  =============================*/
+  .contact-us {
+	position: relative;
+	z-index: 2;
+	margin-top: 65px;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -moz-box;
+	display: -ms-flexbox;
+	display: flex;
+	-webkit-box-align: center;
+	-webkit-align-items: center;
+	-moz-box-align: center;
+	-ms-flex-align: center;
+	align-items: center; }
+  
+  .contact-icon {
+	position: absolute; }
+	.contact-icon i {
+	  font-size: 36px;
+	  top: -5px;
+	  position: relative;
+	  color: #007bff; }
+  
+  .contact-info {
+	margin-left: 75px;
+	color: #fff; }
+	.contact-info h3 {
+	  font-size: 20px;
+	  color: #fff;
+	  margin-bottom: 0; }
+  
+  .copyright {
+	padding: 28px 0;
+	margin-top: 55px;
+	background-color: #202020; }
+	.copyright span,
+	.copyright a {
+	  color: #878787;
+	  -webkit-transition: all 0.3s linear;
+	  -o-transition: all 0.3s linear;
+	  transition: all 0.3s linear; }
+	.copyright a:hover {
+	  color:#007bff; }
+  
+  .copyright-menu ul {
+	text-align: right;
+	margin: 0; }
+  
+  .copyright-menu li {
+	display: inline-block;
+	padding-left: 20px; }
+  
+  .back-to-top {
+	position: relative;
+	z-index: 2; }
+	.back-to-top .btn-dark {
+	  width: 35px;
+	  height: 35px;
+	  border-radius: 50%;
+	  padding: 0;
+	  position: fixed;
+	  bottom: 20px;
+	  right: 20px;
+	  background: #2e2e2e;
+	  border-color: #2e2e2e;
+	  display: none;
+	  z-index: 999;
+	  -webkit-transition: all 0.3s linear;
+	  -o-transition: all 0.3s linear;
+	  transition: all 0.3s linear; }
+	  .back-to-top .btn-dark:hover {
+		cursor: pointer;
+		background: #FA6742;
+		border-color: #FA6742; }
+
+
+
+
+
+/*===============
+  Quote SECTION
+===============*/
+
+#quote{
+	background: #f6f6f6;
+  }
+  
+  #quote div.row {
+	padding-right: 10px;
+	padding-left: 10px;
+  }
+  
+  #quote div.row div.col-lg-6, #quote div.row div.col-lg-12{
+	padding-right: 5px;
+	padding-left: 5px;
+  
+  }
+  
+  input[type="tel"], input[type="url"], input[type="email"], input[type="text"], input[type="password"], select, textarea {
+	  border: none;
+	  background: #eff2f5;
+	  padding: 10px;
+	  width: 100%;
+	  margin-bottom: 10px;
+	  border-radius: 5px;
+	  font-family: 'Ubuntu', sans-serif;
+	  border: 1px solid #e3e3e3;
+	  color: #444;
+  }
+  
+  .quote-btn {
+	font-family: inherit;
+	text-transform: uppercase;
+	display: block;
+	margin: 0 auto;
+	padding: 10px 15px;
+	text-transform: capitalize;
+	font-weight: 500;
+	border: none;
+	background: #2196f3;
+	border-radius: 4rem;
+	cursor: pointer;
+	color: #fff;
+	-webkit-transition: .3s;
+	transition: .3s;
+	border: 2px solid #129bbf;
+	transition: all 0.3s ease;
+  }
+  
+  .quote-btn:hover {
+	background: transparent;
+	color: #129bbf;
+	transition: all 0.3s ease;
+  }
+  /* client testimonial */
+  
+.testimonial{ margin: 0 20px 50px; }
+.testimonial .pic{
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    margin: 0 15px 15px 0;
+}
+.testimonial .pic img{
+    width: 100%;
+    height: auto;
+    border-radius: 50%;
+}
+.testimonial .testimonial-profile{
+    display: inline-block;
+    position: relative;
+    top: 15px;
+}
+.testimonial .title{
+    display: block;
+    font-size: 20px;
+    font-weight: 600;
+    color: #2f2f2f;
+    text-transform: capitalize;
+    margin: 0 0 7px 0;
+}
+.testimonial .post{
+    display: block;
+    font-size: 14px;
+    color: #5d7aa7;
+}
+.testimonial .description{
+    padding: 20px 22px;
+    background: #1f487e;
+    font-size: 15px;
+    color: #fff;
+    line-height: 25px;
+    margin: 0;
+    position: relative;
+}
+.testimonial .description:before,
+.testimonial .description:after{
+    content: "";
+    border-width: 18px 0 0 18px;
+    border-style: solid;
+    border-color: #5d7aa7 transparent transparent;
+    position: absolute;
+    bottom: -18px;
+    left: 0;
+}
+.testimonial .description:after{
+    border-width: 18px 18px 0 0;
+    left: auto;
+    right: 0;
+}
+.owl-theme .owl-controls{
+    margin-top: 10px;
+    margin-left: 30px;
+}
+.owl-theme .owl-controls .owl-buttons div{
+    opacity: 0.8;
+    background: #fff;
+}
+.owl-prev:before,
+.owl-next:before{
+    content: "\f053";
+    font-family: "Font Awesome 5 Free"; font-weight: 900;
+    font-size: 20px;
+    color: #1f487e;
+}
+.owl-next:before{ content: "\f054"; }
